# space-time-gis

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  README.md  gen_changelog.sh  logconfig.yml  package.json  pypi_push.sh  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
docs/: intro.md
docs/source/: conf.py  configuration.rst  contributing.rst  examples.rst  flask_migrate.rst  index.rst  install.rst  intro.rst  sqleditor.rst
examples_data/: test_00.tif  test_01.tif  test_02.tif  test_03.tif  test_04.tif  test_05.tif  test_06.tif  test_07.tif  test_08.tif
spacetimegis/: __init__.py  cli.py  config.py  constants.py  db_engine_specs.py  exceptions.py  setting.py  settings.py  version.py
spacetimegis/config_templates/: default_spacetimegis.cfg
spacetimegis/core/: __init__.py  helloworld.py  import_csv.py  import_data.py
spacetimegis/data/: __init__.py  sentineldata.py
spacetimegis/data/download/: download_agora.py
spacetimegis/db_engines/: constants.py
spacetimegis/db_engines/clickhouse/: __init__.py  clickhouseutils.py
spacetimegis/db_engines/sqlalchemy/: sqlal_utils.py
spacetimegis/geo_utils/: projtansform.py  utils.py
spacetimegis/geo_utils/gdal/: tools.py
spacetimegis/models/: core.py  helpers.py  sql_query.py
spacetimegis/utils/: logging_mixin.py
spacetimegis/views/: __init__.py  api.py  blueprint_api.py  core_api.py  download_api.py  ml_api.py  utils.py
tests/core/: test_helloworld.py  test_py.py
tests/data/: test_sentineldata.py
tests/geo_utils/: test_utils.py
tests/geo_utils/gdal/: test.py  (+1 more)
(+12 files in other folders)
