[metadata]
name = Superset
summary = a bigdata deal platform
description-file = README.md
author = Javy xu
author-email = xujavy@gmail.com
license = Apache License, Version 2.0

[files]
packages = framework

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_sphinx]
upload-dir = docs/_build/html

[nosetests]
verbosity = 3
detailed-errors = 1
with-coverage = 1
nocapture = 1
cover-package = framework
